fix(timeline): align symbols

--- a/frontend/assets/css/timeline.scss
+++ b/frontend/assets/css/timeline.scss
@@ -65,12 +65,6 @@ html {
   box-sizing: content-box;
 }
 
-// When the modal is open we want to disable scroll on body
-.no-scroll {
-  overflow: hidden;
-  height: 100vh;
-}
-
 #legend {
   font-size: 16px;
   display: flex;
@@ -290,13 +284,13 @@ html {
         } //&:hover
         &.hiddenRow {
           background: white;
-          width: 85vw;
+          width: 90vw;
           position: fixed;
-          left: 50%;
-          height: 95vh;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          overflow-y: auto; // Enables vertical scrolling if needed
+          left: 0;
+          height: 100vh;
+          top: 0;
+          z-index: 1;
+          overflow: scroll;
           opacity: 1;
           z-index: 9;
           padding: 5vw;
@@ -387,7 +381,6 @@ html {
           border: 0;
           height: auto;
           z-index: 1;
-          /*background:blue;*/
           &:after {
             opacity: 0.6;
           }
@@ -416,7 +409,7 @@ html {
               vertical-align: bottom;
               position: absolute;
               content: "";
-              left: -1vw;
+              left:-1vw;
               clip-path: polygon(50% 0, 100% 100%, 0 100%);
               width: 7.5vw;
             }
@@ -426,69 +419,61 @@ html {
             }
           } //&.entityEventCount
           &.year {
-            position: absolute;
-            margin-bottom: 0;
-            width: 100%;
-            transform: translateX(-50%);
-            bottom: -3vw;
-            /*left: 0;*/
-            text-align: center;
+            vertical-align: bottom;
+            transform: translateX(40%);
+            width: 3vw;
+            height: 3vw;
+              position: absolute;
+            bottom: -7vw;
+            z-index: 1;
+            padding-left:0.2vw;
             span {
               opacity: 1;
             }
           } //.year
           &.historicalEventCount {
             width: 3vw;
-            height: 6vw;
+            height: 4vw;
             margin-bottom: 0;
             vertical-align: bottom;
             position: absolute;
-            bottom: -3vw;
+            bottom: -4vw;
             transform: translateX(90%);
             &.present {
               /*background: $primary-dark;*/
-              background-image: linear-gradient(
-                90deg,
-                transparent 1%,
-                black 4%,
-                transparent 3%
-              );
+              background-image: linear-gradient(90deg, $primary-light  1%, $primary-light 5%, transparent 3%);
             } //&.present
             & span {
+              
             } //& span
           } //&.historicalEventCount
           &.birthEventCount {
+            vertical-align: bottom;
+            transform: translateX(40%);
+            opacity: 0;
             width: 3vw;
             height: 3vw;
-            margin-bottom: 0;
-            vertical-align: bottom;
-            position: absolute;
-            bottom: -2vw;
-            transform: translateX(90%);
-            &.present {
-              background: transparent;
-              z-index: 1;
-              border: 0.15vw dotted darkgoldenrod;
-              border: 0;
-              background-image: linear-gradient(
-                0deg,
-                rgba(184, 134, 11, 0.5) 30%,
-                transparent 100%
-              );
+            background-image: linear-gradient(0deg, rgba(212,175,55, 1) 2%, rgba(255,255,255,0) 100%);
               background-repeat: no-repeat;
-              width: 2vw;
-              height: 2vw;
-              bottom: 0;
+              position: absolute;
+            bottom: 0;
+            z-index: 1;
+            &.present {
+              opacity:1;
               &:before {
-                width: 1vw;
-                height: 1vw;
+                width: 1.5vw;
+                height: 1.5vw;
                 content: "B";
                 position: absolute;
                 font-size: 0.9vw;
                 text-align: center;
-                bottom: 0.6vw;
-                left: 0.5vw;
                 color: black;
+                text-align: center;
+                bottom: 0.75vw;
+                color: black;
+                z-index: 0;
+                left:0.75vw;
+                /*background:rgba(255,255,255,0.7);*/
               } //&:before
             } //&.present
             & span {
@@ -496,31 +481,32 @@ html {
             } //span
           } //&.birthEventCount
           &.deathEventCount {
-            width: 2vw;
-            height: 1.2vw;
             margin-bottom: 0;
             vertical-align: bottom;
             position: absolute;
-            bottom: -2.3vw;
-            transform: translateX(90%);
+            bottom: -3.4vw;
+            transform: translateX(40%);
+            z-index: 1;
+            background: transparent;
+            background-image: linear-gradient(0deg, transparent 1%, black 2%);
+            background-repeat: no-repeat;
+            width: 3vw;
+            height: 3vw;
+            opacity:0;
             &.present {
-              z-index: 1;
-              /*background:black;*/
-              background: transparent;
-              background-image: linear-gradient(0deg, transparent 1%, black 2%);
-              background-repeat: no-repeat;
-              width: 2vw;
-              height: 2vw;
+              opacity:1;
               &:before {
-                width: 2vw;
-                height: 1.2vw;
+                width: 1.5vw;
+                height: 1.5vw;
                 content: "D";
                 position: absolute;
                 font-size: 0.9vw;
                 text-align: center;
-                bottom: 0.6vw;
+                bottom: 0.75vw;
                 color: white;
                 z-index: 0;
+                left:0.75vw;
+                border-radius: 50%;
               }
             } //&.present
             & span {
@@ -528,28 +514,29 @@ html {
             } //span
           } //&.deathEventCount
           &.marriageEventCount {
-            width: 1vw;
-            height: 1vw;
+            background: transparent;
+            z-index: 1;
+            border-radius: 50%;
+            background: radial-gradient(
+              circle,
+              rgb(255, 255, 255) 31%,
+              rgba(255, 255, 255, 0.3) 33%,
+              rgba(128, 31, 0, 0.6) 69%
+            );
+            background-repeat: no-repeat;
+            width: 3vw;
+            height: 3vw;
             margin-bottom: 0;
             vertical-align: bottom;
             position: absolute;
-            bottom: -1.7vw;
-            transform: translateX(90%);
+            bottom: 0vw;
+            transform: translateX(
+              40%
+            ); 
+            opacity:0;
             &.present {
-              background: transparent;
-              z-index: 1;
-              border-radius: 50%;
-              background: radial-gradient(
-                circle,
-                rgb(255, 255, 255) 31%,
-                rgba(255, 255, 255, 0.3) 33%,
-                rgba(128, 31, 0, 0.6) 69%
-              );
-              background-repeat: repeat;
-              background-repeat: no-repeat;
-              width: 2vw;
-              height: 2vw;
-              bottom: 0;
+
+              opacity:1;
               &:before {
                 width: 1vw;
                 height: 1vw;
@@ -557,8 +544,8 @@ html {
                 position: absolute;
                 font-size: 0.9vw;
                 text-align: center;
-                bottom: 0.8vw;
-                left: 0.5vw;
+                bottom: 1.2vw;
+                left: 1vw;
                 color: black;
               } //&:before
             } //.present
@@ -782,3 +769,4 @@ html {
     } //tr
   } //table
 } //#data
+
